--- a/MvcCvWebProject/MvcCvWebProject.csproj
+++ b/MvcCvWebProject/MvcCvWebProject.csproj
@@ -129,6 +129,8 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\DeneyimController.cs" />
+    <Compile Include="Controllers\HakkimdaController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\VitrinController.cs" />
     <Compile Include="Global.asax.cs">
@@ -174,6 +176,14 @@
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\DeneyimRepository.cs" />
+    <Compile Include="Repositories\EgitimRepository.cs" />
+    <Compile Include="Repositories\GenericRepository.cs" />
+    <Compile Include="Repositories\HakkimdaRepository.cs" />
+    <Compile Include="Repositories\HobiRepository.cs" />
+    <Compile Include="Repositories\iletisimRepository.cs" />
+    <Compile Include="Repositories\SertifikaRepository.cs" />
+    <Compile Include="Repositories\YetenekRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="AdminTema\build\config\postcss.config.js" />
@@ -2459,6 +2469,11 @@
     <Content Include="Views\Vitrin\Hobi.cshtml" />
     <Content Include="Views\Vitrin\Sertifika.cshtml" />
     <Content Include="Views\Vitrin\iletisim.cshtml" />
+    <Content Include="Views\Shared\AdminLayout.cshtml" />
+    <Content Include="Views\Hakkimda\Index.cshtml" />
+    <Content Include="Views\Deneyim\Index.cshtml" />
+    <Content Include="Views\Deneyim\DeneyimEkle.cshtml" />
+    <Content Include="Views\Deneyim\DeneyimGetir.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
